--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,9 @@
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
 
+        <p class="view"><a href="/about-me.html">About Me</a></p>
+
+
         {% if site.show_downloads %}
 <!--         <ul class="downloads">
           <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
