--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,8 +31,11 @@
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
 
+        <h3>Navigation</h3>
         <p class="view"><a href="/about-me.html">About Me</a></p>
-
+        <p class="view"><a href="/about-my-mentor.html">About My Mentor</a></p>
+        <p class="view"><a href="/about-my-project.html">About My Project</a></p>
+        <p class="view"><a href="/my-blog.html">My Blog</a></p>
 
         {% if site.show_downloads %}
 <!--         <ul class="downloads">
