--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,10 +32,16 @@
         {% endif %}
 
         <h3>Navigation</h3>
-        <p class="view"><a href="/about-me.html">About Me</a></p>
+        <ul>
+          <li><a href="/about-me.html">About Me</a></li>
+          <li><a href="/about-my-mentor.html">About My Mentor</a></li>
+          <li><a href="/about-my-project.html">About My Project</a></li>
+          <li><a href="/my-blog.html">My Blog</a></li>
+        </ul>
+<!--         <p class="view"><a href="/about-me.html">About Me</a></p>
         <p class="view"><a href="/about-my-mentor.html">About My Mentor</a></p>
         <p class="view"><a href="/about-my-project.html">About My Project</a></p>
-        <p class="view"><a href="/my-blog.html">My Blog</a></p>
+        <p class="view"><a href="/my-blog.html">My Blog</a></p> -->
 
         {% if site.show_downloads %}
 <!--         <ul class="downloads">
