--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <header>
+<!--       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
         {% if site.logo %}
@@ -29,7 +29,7 @@
 
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %}
+        {% endif %} -->
 
         <h3>Navigation</h3>
         <ul>
