--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,7 @@
 
         <h3>Navigation</h3>
         <ul>
+          <li><a href="/">Home</a></li>
           <li><a href="/about-me.html">About Me</a></li>
           <li><a href="/about-my-mentor.html">About My Mentor</a></li>
           <li><a href="/about-my-project.html">About My Project</a></li>
