--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %} -->
-
+        <div>
         <h3>Navigation</h3>
         <ul>
           <li><a href="/">Home</a></li>
@@ -38,7 +38,7 @@
           <li><a href="/about-my-mentor.html">About My Mentor</a></li>
           <li><a href="/about-my-project.html">About My Project</a></li>
           <li><a href="/my-blog.html">My Blog</a></li>
-        </ul>
+        </ul></div>
 <!--         <p class="view"><a href="/about-me.html">About Me</a></p>
         <p class="view"><a href="/about-my-mentor.html">About My Mentor</a></p>
         <p class="view"><a href="/about-my-project.html">About My Project</a></p>
