--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -55,10 +55,15 @@ a:hover small {
   color:#777;
 }
 
-.wrapper {
+.wrapper-two {
   width:860px;
   margin:0 auto;
   display: flex;
+}
+
+.wrapper {
+  width:860px;
+  margin:0 auto;
 }
 
 blockquote {
