--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -55,17 +55,11 @@ a:hover small {
   color:#777;
 }
 
-.wrapper-two {
-  width:860px;
-  margin:0 auto;
-  display: flex;
-}
-
 .wrapper {
   width:860px;
   margin:0 auto;
   display: flex;
-  row-gap: 10px
+  column-gap: 150px
   
 }
 
